<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pocket Library</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="save_book_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="no_author">No Author Listed</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">Go Back</string>
    <string name="share_text">A Must Read Book: </string>


    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
        This app is a modified version of the one provided as part of the Udacity Nanodegree program.</string>

    <string name="no_internet_connection_message">No Internet connection available. An Internet connection is required to add a book. Please verify your connection and try again.</string>
    <string name="isbn_not_valid">ISBN not valid. Please enter or scan a valid ISBN.</string>
    <string name="isbn_start_not_valid">ISBN not valid. An ISBN13 starts with "978".</string>
    <string name="isbn_format_not_valid">ISBN format not valid. An ISBN contains only numbers.</string>
    <string name="scanner_activity">Barcode Scanner</string>
    <string name="book_saved_confirmation">Book saved to library</string>
    <string name="book_deleted_confirmation">Book discarded</string>

</resources>
