<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.pocketlibrary.AddBookFragment">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:id="@+id/isbncontainer"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="@integer/ean_width"
                android:id="@+id/isbn"
                android:saveEnabled="true"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:hint="@string/input_hint"
                android:imeOptions="actionDone"
                android:paddingRight="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_button"
                android:id="@+id/scan_button"/>

        </LinearLayout>


<!--        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_book_no_connection_message"
            android:textSize="@dimen/small_fontsize"
            android:layout_below="@id/isbncontainer"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:text="@string/no_internet_connection_message"/> -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookTitle"
            android:textSize="@dimen/head_line"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:paddingRight="20dp"
            android:layout_below="@id/isbncontainer"
            android:layout_alignLeft="@id/isbncontainer"
            android:layout_alignStart="@id/isbncontainer"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookSubTitle"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/bookTitle"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_alignLeft="@id/isbncontainer"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/authors"
            android:gravity="end"
            android:textSize="@dimen/small_fontsize"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/bookSubTitle"
            android:layout_alignRight="@id/isbncontainer"
            android:layout_alignEnd="@id/isbncontainer"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookCover"
            android:contentDescription="@string/book_cover"
            android:layout_alignTop="@id/authors"
            android:layout_alignLeft="@id/isbncontainer"
            android:layout_alignStart="@id/isbncontainer"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categories"
            android:textSize="@dimen/small_fontsize"
            android:layout_below="@id/bookCover"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@id/isbncontainer"
            android:layout_alignStart="@id/isbncontainer"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/cancel_button"
                android:contentDescription="@string/cancel_button"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/delete_button"
                android:drawableLeft="@drawable/ic_action_discard"
                android:visibility="invisible"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/save_book_button"
                android:contentDescription="@string/save_book_button"
                android:visibility="invisible"
                android:layout_weight="1"
                android:id="@+id/save_button"
                android:drawableLeft="@drawable/ic_action_accept"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_gravity="bottom"
                />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
